--- a/pom.xml
+++ b/pom.xml
@@ -34,20 +34,20 @@
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+		<!-- springboot和jpa集成 -->
        <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-core -->
+		<!-- shiro架包 -->
       <dependency>
 	    <groupId>org.apache.shiro</groupId>
 	    <artifactId>shiro-core</artifactId>
 	    <version>1.4.0</version>
       </dependency>
       
-		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
+		<!-- shiro和spring集成包 -->
 	  <dependency>
 		    <groupId>org.apache.shiro</groupId>
 		    <artifactId>shiro-spring</artifactId>
